Minor fix to prevent gaps when searching long lists

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -82,5 +82,8 @@
 
     input {
         outline-style:none;   
-      }
-      
+    }
+
+    .library_entry {
+        margin-bottom: 5pt;
+    }
